<resources>
    <string name="app_name">掌上图书馆</string>
    <string name="images">图册</string>
    <string name="state">状态</string>
    <string name="imageName">图片名</string>
    <string name="symbol">/</string>
    <string name="math_0">0</string>
    <string name="seconds_3">3秒</string>
    <string name="electronicLibraryCard">电子借阅证</string>
    <string name="welcome1">掌上图书馆带您享受极致阅读体验</string>
    <string name="app_starting">应用启动中…</string>
    <string name="welcome">欢迎使用移动图书管理系统</string>
    <string name="register">注册新用户</string>
    <string name="forget">修改密码</string>
    <string name="next">下一步</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="role">身份</string>
    <string name="usernameHint">学号/用户名</string>
    <string name="login">登录</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="radioReader">读 者</string>
    <string name="radioLibrarian">管理员</string>
    <string name="reset">重置</string>
    <string name="yourRole">您的身份：</string>
    <string name="student">在校学生</string>
    <string name="other">校外读者</string>
    <string name="getCode">获取验证码</string>
    <string name="goBack">返回</string>
    <string name="next_step_1">1.请输入新的密码；</string>
    <string name="next_step_2">2.再次输入密码；</string>
    <string name="next_step_3">3.点击“提交”按钮。</string>
    <string name="nextStep">下一步</string>
    <string name="step_1">1.请输入已绑定的邮箱账号；</string>
    <string name="step_2">2.点击“获取验证码”按钮，获取验证码；</string>
    <string name="step_3">3.输入验证码，点击“下一步”。</string>
    <string name="submit">提交</string>
    <string name="add">添加</string>
    <string name="update">更新</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="myDetail">我的详情</string>
    <string name="reserve">一键预约</string>
    <string name="back">返回</string>
    <string name="readerDetail">读者详情</string>
    <string name="personalInfo">个人信息</string>
    <string name="reader_manage">读者管理</string>
    <string name="apply">挂失及处罚处理</string>
    <string name="book_manage">图书管理</string>
    <string name="notice">公告栏</string>
    <string name="keyword">请输入关键字</string>
    <string name="clickToSelect">点击检索</string>
    <string name="auto_fill_l_bookId">系统生成</string>
    <string name="bookTitle">书本详情</string>
    <string name="bookHot">热度:</string>
    <string name="bookState">状态:</string>
    <string name="bookState1">状态</string>
    <string name="bookStateAutoFill">在馆</string>
    <string name="bookId">No.</string>
    <string name="bookId_1">书本号</string>
    <string name="bookName">名称:</string>
    <string name="bookAuthor">作者:</string>
    <string name="bookIsbn">Isbn:</string>
    <string name="bookLibrary">所属馆:</string>
    <string name="bookLocation">馆藏地点:</string>
    <string name="bookCallNumber">索书号:</string>
    <string name="bookTheme">主题:</string>
    <string name="bookDescription">详情:</string>
    <string name="bookFirst">一级分类:</string>
    <string name="bookThird">二级分类:</string>
    <string name="bookType">文献类型:</string>
    <string name="bookHouse">出版社:</string>
    <string name="bookDate">出版日期:</string>
    <string name="bookDateStandard">yyyy-MM-dd</string>
    <string name="bookDateAutoFill">2021-01-01</string>
    <string name="bookPrice">定价(元):</string>
    <string name="chooseLibrary">请选择图书所属的书馆</string>
    <string name="chooseFirst">请选择图书的一级分类</string>
    <string name="chooseThird">请选择图书的二级分类</string>
    <string name="chooseType">请选择图书的文献类型</string>
    <string name="emptyString">null</string>
    <string name="bookPrice_0">0.00</string>
    <string name="auto_fill_readerId">系统自动生成</string>
    <string name="pay">待付(元):</string>
    <string name="createTime">创建时间:</string>
    <string name="payTime">支付时间:</string>
    <string name="clickToPay"><![CDATA[去支付—>]]></string>
    <string name="hasPay">已支付</string>
    <string name="goPay">缴费</string>
    <string name="payId">单号:</string>
    <string name="applicationTitle">处罚记录详情</string>
    <string name="endTime">预计还书:</string>
    <string name="days">逾期天数:</string>
    <string name="applicationLibrarianId">工号:</string>
    <string name="defaultBookContact">默认为注册邮箱</string>
    <string name="basic_information">基本信息</string>
    <string name="readerId">读者号:</string>
    <string name="readerName">姓名:</string>
    <string name="readerSex">性别:</string>
    <string name="yourSex">您的性别？</string>
    <string name="readerAge">年龄:</string>
    <string name="readerDepartment">学院:</string>
    <string name="readerClassroom">班级:</string>
    <string name="readerUsername">账号:</string>
    <string name="readerPassword">密码:</string>
    <string name="readerPhone">手机号码:</string>
    <string name="readerEMail">电子邮箱:</string>
    <string name="reader_permission">权限信息</string>
    <string name="readerCredit">信誉积分:</string>
    <string name="readerAmount">剩余量:</string>
    <string name="readerPermission">权限级别:</string>
    <string name="readerType">证件类型:</string>
    <string name="readerType1">证件类型</string>
    <string name="yourReaderType">您的证件类型？</string>
    <string name="readerTerm">到期时间:</string>
    <string name="edit_basic_information">编辑基本信息</string>
    <string name="apply_reader_permission">申请借阅权限</string>
    <string name="delete_reader">删除读者信息</string>
    <string name="reader_picture">图片信息</string>
    <string name="borrowTime">借阅时间</string>
    <string name="returnTime">还书时间</string>
    <string name="reserveTime">预约时间</string>
    <string name="validTime">有效时间至</string>
    <string name="moreDetail">更多详情</string>
    <string name="toLoss">挂失</string>
    <string name="toRenew">续借</string>
    <string name="toLent">转借</string>
    <string name="quitReservation">放弃预约</string>
    <string name="lookDescription">详情</string>
    <string name="getIt">获取:</string>
    <string name="owner">主人:</string>
    <string name="bookContact">联系方式:</string>
    <string name="shareDate">分享时间:</string>
    <string name="readerLibrary">读者书库</string>
    <string name="code">code:</string>
    <string name="message">结果:</string>
    <string name="tip">提示:</string>
    <string name="from">来源:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_r_main">掌上图书馆</string>
    <string name="r_tab_text_1">我的借阅</string>
    <string name="r_tab_text_2">馆藏图书</string>
    <string name="r_tab_text_3">我的分享</string>
    <string name="r_tab_text_4">处理记录</string>
    <string name="moreFunction">更多功能</string>
    <string name="menu_main">主要业务</string>
    <string name="menu_myself">个人信息</string>
    <string name="menu_setting">个人设置</string>
    <string name="menu_card">电子卡</string>
    <string name="title_activity_l_main">LMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_book">添加新书</string>
    <string name="add_application">开处罚单</string>
    <string name="delete_book">删除此书</string>
    <string name="add_reader">添加读者</string>
    <string name="scan">扫一扫</string>
    <string name="feedback">反馈建议</string>
    <string name="aboutUs">关于我们</string>
    <string name="bookList">书籍列表</string>
    <string name="delete">删除</string>
    <string name="l_tab_text_2">缴费处理</string>
    <string name="l_tab_text_3">读者管理</string>
    <string name="l_tab_text_4">图书管理</string>
    <string name="role_librarian">管理员</string>
    <string name="librarianId">工号</string>
    <string name="librarianName">姓名</string>
    <string name="librarianSex">性别</string>
    <string name="librarianAge">年龄</string>
    <string name="librarianWorkplace">工作地点</string>
    <string name="librarianUsername">用户名</string>
    <string name="librarianPermission">权限级别</string>
    <string name="quitAndClean">退出登录并清空应用的个人信息</string>
    <string name="buttonUpdate">刷新</string>
    <string name="closeAccount">注销账户</string>
    <string name="show_picture">查看图片</string>
    <string name="clickToCheck">点击检索</string>
    <string name="allReaderType">全部</string>
    <string name="checkedReader">已审核</string>
    <string name="uncheckedReader">未审核</string>
    <string name="checkingReader">待审核</string>
    <string name="orderBy">排序方式:</string>
    <string name="selectBy">查询方式:</string>
    <string name="expiredRecord">过期记录</string>
    <string name="nowBorrow">当前借阅</string>
    <string name="nowReserve">当前预约</string>
    <string name="readerAmountAutoFill">16</string>
    <string name="readerAmountHint">请给他设置一个初始借阅量</string>
    <string name="readerCreditAutoFill">100</string>
    <string name="readerCreditHint">请给他设置一个初始信誉分</string>
    <string name="readerTermHint">格式：2021-01-01</string>
    <string name="checkOk">审核通过</string>
    <string name="checkNo">审核不通过</string>
    <string name="whichLibrary">指定书馆：</string>
    <string name="whichSelectBy">指定检索：</string>
    <string name="whichState">指定状态：</string>
    <string name="whichType">图书分类：</string>
    <string name="whichOrderBy">排序方式：</string>
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="scan_code">扫一扫</string>
    <string name="open_flash">打开手电筒</string>
    <string name="close_flash">关闭手电筒</string>
    <string name="gallery">相册</string>
    <string name="scan_failed_tip">图片解析失败，换个图片试试.</string>
    <string name="returnBook">扫码还书</string>
    <string name="addBorrowBook">扫码添加图书</string>
    <string name="borrowBook">完成借书</string>
    <string name="demo_info_text">重要说明: \n\n本 Demo 为了方便向商户展示支付宝的支付流程，所以订单信息的加签过程放在客户端完成。\n在商户的真实App内，为了防止商户私密数据泄露，引发资金损失和身份冒用等各种安全风险，商户私钥 RSA_PRIVATE 等数据严禁放在客户端，订单信息的加签过程也务必放在服务端完成。\n若商户接入时不遵照此说明而造成损失，需自行承担。</string>
    <string name="pay_with_alipay">支付宝支付 Demo</string>
    <string name="pay_with_alipay_hk">HK 支付宝支付 Demo</string>
    <string name="auth_with_alipay">支付宝授权 Demo</string>
    <string name="web_to_native">网页支付转 native 支付 Demo</string>
    <string name="check_sdk_version">支付宝 SDK 版本</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="auth_success">授权成功:</string>
    <string name="auth_failed">授权失败:</string>
    <string name="error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="pay_result">支付结果:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">错误: 需要配置PARTNER |APP_ID| RSA_PRIVATE| TARGET_ID</string>
    <string name="alipay_sdk_version_is">支付宝 SDK 版本:</string>
    <string name="confirm">确定</string>
    <string name="error_missing_h5_pay_url">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="error">错误</string>
    <string name="pay_cross_border">境外收单支付 Demo</string>
    <string name="error_missing_global_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="payment_inst_hk">付款方: HK</string>
    <string name="payment_inst_cn">付款方: CN</string>
    <string name="defaultTitle">标题</string>
    <string name="defaultTip">温馨提示</string>
    <string name="payTitle">收银台</string>
    <string name="tvMoney">支付金额</string>
    <string name="tvSymbol">¥</string>
    <string name="tvPayWay">选择支付方式</string>
    <string name="btnPay">支付¥0.00</string>
    <string name="tvPayDesc">商品详情：</string>
    <string name="payWay_zhifubao">支付宝</string>
    <string name="payWay_zhifubao_ad">10亿用户都在用，真安全，更放心</string>
    <string name="payWay_zhifubao_suggest">推荐</string>
    <string name="payWay_huabei">花呗</string>
    <string name="payWay_huabei_ad">用花呗免息产长达40天</string>
</resources>