<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ul.reader.main.RMainActivity">
    <item
        android:id="@+id/menu_Person"
        android:title="@string/menu_myself"
        android:icon="@drawable/placeholder0" />
    <item
        android:id="@+id/menu_Setting"
        android:title="@string/menu_setting"
        android:icon="@drawable/placeholder0"/>
    <item
        android:id="@+id/menu_Card"
        android:title="@string/menu_card"
        android:icon="@drawable/placeholder0"/>
    <item
        android:id="@+id/menu_Scan"
        android:title="@string/scan"/>
    <item
        android:id="@+id/menu_Feedback"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/menu_AboutUs"
        android:title="@string/aboutUs"/>
</menu>