<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.ul.librarian.main.LMainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_l_main" />

    <fragment
        android:id="@+id/nav_myself"
        android:name="com.example.ul.librarian.person.LPersonManageFragment"
        android:label="@string/menu_myself"
        tools:layout="@layout/activity_l_person_detail" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.ul.librarian.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_slideshow" />

</navigation>